--- a/Dockerfile-centos
+++ b/Dockerfile-centos
@@ -5,12 +5,22 @@ ENV JAVA_HOME /etc/alternatives/jre_openjdk
 
 ARG user=jenkins
 ARG group=jenkins
-ARG uid=1000
-ARG gid=1000
+ARG uid=1002
+ARG gid=1002
 ARG http_port=8080
 ARG agent_port=50000
 ARG JENKINS_HOME=/var/jenkins_home
 ARG REF=/usr/share/jenkins/ref
+
+ARG http_proxy=http://10.180.57.120:3128
+ARG https_proxy=http://10.180.57.120:3128
+ARG HTTP_PROXY=http://10.180.57.120:3128
+ARG HTTPS_PROXY=http://10.180.57.120:3128
+
+ENV http_proxy $http_proxy
+ENV https_proxy $https_proxy
+ENV HTTP_PROXY $HTTP_PROXY
+ENV HTTPS_PROXY $HTTPS_PROXY
 
 ENV JENKINS_HOME $JENKINS_HOME
 ENV JENKINS_SLAVE_AGENT_PORT ${agent_port}
