--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -1,6 +1,15 @@
 FROM openjdk:8-jdk-alpine
 
-RUN apk add --no-cache git git-lfs openssh-client curl unzip bash ttf-dejavu coreutils tini
+RUN apk add --no-cache tzdata git git-lfs openssh-client curl unzip bash ttf-dejavu coreutils tini
+
+##locales for alpine
+RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub
+RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.31-r0/glibc-bin-2.31-r0.apk
+RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.31-r0/glibc-i18n-2.31-r0.apk
+RUN apk add glibc-bin-2.31-r0.apk glibc-i18n-2.31-r0.apk
+RUN /usr/glibc-compat/bin/localedef -i de_DE -f UTF-8 de_DE.UTF-8
+
+RUN rm -f /etc/localtime && ln -sf /usr/share/zoneinfo/Europe/Berlin /etc/localtime
 
 ARG user=jenkins
 ARG group=jenkins
@@ -11,6 +20,10 @@ ARG agent_port=50000
 ARG JENKINS_HOME=/var/jenkins_home
 ARG REF=/usr/share/jenkins/ref
 
+ARG LANG=de_DE.UTF-8
+ENV LANG $LANG
+
+##------Your Proxy IP here ------##
 ARG http_proxy=http://10.180.57.120:3128
 ARG https_proxy=http://10.180.57.120:3128
 ARG HTTP_PROXY=http://10.180.57.120:3128
@@ -25,7 +38,7 @@ ENV JENKINS_HOME $JENKINS_HOME
 ENV JENKINS_SLAVE_AGENT_PORT ${agent_port}
 ENV REF $REF
 
-# Jenkins is run with user `jenkins`, uid = 1000
+# Jenkins is run with user `jenkins`, uid = look above
 # If you bind mount a volume from the host or a data container,
 # ensure you use the same uid
 RUN mkdir -p $JENKINS_HOME \
@@ -44,11 +57,11 @@ RUN mkdir -p ${REF}/init.groovy.d
 
 # jenkins version being bundled in this docker image
 ARG JENKINS_VERSION
-ENV JENKINS_VERSION ${JENKINS_VERSION:-2.176.4}
+ENV JENKINS_VERSION ${JENKINS_VERSION:-2.222.3}
 
 # jenkins.war checksum, download will be validated using it (sha256sum)
 #ARG JENKINS_SHA=33a6c3161cf8de9c8729fd83914d781319fd1569acf487c7b1121681dba190a5
-ARG JENKINS_SHA=8186fd4a9a43088f52c8e98da3ea314562c60c2ee25027e5d9ff4160cee24e80
+ARG JENKINS_SHA=1529d642e29e74f65369ff5611935e9361065d9e8f65344a64912c5660cc0781
 
 # Can be used to customize where jenkins.war get downloaded from
 ARG JENKINS_URL=https://repo.jenkins-ci.org/public/org/jenkins-ci/main/jenkins-war/${JENKINS_VERSION}/jenkins-war-${JENKINS_VERSION}.war
