--- a/Dockerfile-centos
+++ b/Dockerfile-centos
@@ -1,6 +1,11 @@
 FROM centos
 
-RUN yum update -y && yum install -y epel-release && yum install -y git curl dpkg java java-devel unzip which && curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.rpm.sh | bash && yum install -y git-lfs && yum clean all
+RUN yum update -y && yum install -y epel-release && yum install -y glibc-langpack-de git curl dpkg java java-devel unzip which && \
+curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.rpm.sh | bash && \
+yum install -y git-lfs && yum clean all
+
+RUN rm -f /etc/localtime && ln -sf /usr/share/zoneinfo/Europe/Berlin /etc/localtime
+
 ENV JAVA_HOME /etc/alternatives/jre_openjdk
 
 ARG user=jenkins
@@ -12,6 +17,10 @@ ARG agent_port=50000
 ARG JENKINS_HOME=/var/jenkins_home
 ARG REF=/usr/share/jenkins/ref
 
+ARG LANG=de_DE.UTF-8
+ENV LANG $LANG
+
+##------Your Proxy IP here ------##
 ARG http_proxy=http://10.180.57.120:3128
 ARG https_proxy=http://10.180.57.120:3128
 ARG HTTP_PROXY=http://10.180.57.120:3128
@@ -26,7 +35,7 @@ ENV JENKINS_HOME $JENKINS_HOME
 ENV JENKINS_SLAVE_AGENT_PORT ${agent_port}
 ENV REF $REF
 
-# Jenkins is run with user `jenkins`, uid = 1000
+# Jenkins is run with user `jenkins`, uid = look above
 # If you bind mount a volume from the host or a data container,
 # ensure you use the same uid
 RUN mkdir -p $JENKINS_HOME \
@@ -55,11 +64,11 @@ RUN curl -fsSL https://github.com/krallin/tini/releases/download/${TINI_VERSION}
 
 # jenkins version being bundled in this docker image
 ARG JENKINS_VERSION
-ENV JENKINS_VERSION ${JENKINS_VERSION:-2.176.4}
+ENV JENKINS_VERSION ${JENKINS_VERSION:-2.222.3}
 
 # jenkins.war checksum, download will be validated using it (sha256sum)
 #ARG JENKINS_SHA=33a6c3161cf8de9c8729fd83914d781319fd1569acf487c7b1121681dba190a5
-ARG JENKINS_SHA=8186fd4a9a43088f52c8e98da3ea314562c60c2ee25027e5d9ff4160cee24e80
+ARG JENKINS_SHA=1529d642e29e74f65369ff5611935e9361065d9e8f65344a64912c5660cc0781
 
 # Can be used to customize where jenkins.war get downloaded from
 ARG JENKINS_URL=https://repo.jenkins-ci.org/public/org/jenkins-ci/main/jenkins-war/${JENKINS_VERSION}/jenkins-war-${JENKINS_VERSION}.war
