alpine problem glibc

--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -3,11 +3,11 @@ FROM openjdk:8-jdk-alpine
 RUN apk add --no-cache tzdata git git-lfs openssh-client curl unzip bash ttf-dejavu coreutils tini
 
 ##locales for alpine
-RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub
-RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.31-r0/glibc-bin-2.31-r0.apk
-RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.31-r0/glibc-i18n-2.31-r0.apk
-RUN apk add glibc-bin-2.31-r0.apk glibc-i18n-2.31-r0.apk
-RUN /usr/glibc-compat/bin/localedef -i de_DE -f UTF-8 de_DE.UTF-8
+#RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub
+#RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.31-r0/glibc-bin-2.31-r0.apk
+#RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.31-r0/glibc-i18n-2.31-r0.apk
+#RUN apk add glibc-bin-2.31-r0.apk glibc-i18n-2.31-r0.apk
+#RUN /usr/glibc-compat/bin/localedef -i de_DE -f UTF-8 de_DE.UTF-8
 
 RUN rm -f /etc/localtime && ln -sf /usr/share/zoneinfo/Europe/Berlin /etc/localtime
 
