--- a/Dockerfile-jdk11
+++ b/Dockerfile-jdk11
@@ -18,10 +18,10 @@ ARG LANG=de_DE.UTF-8
 ENV LANG $LANG
 
 ##------Your Proxy IP here ------##
-ARG http_proxy=http://10.180.57.120:3128
-ARG https_proxy=http://10.180.57.120:3128
-ARG HTTP_PROXY=http://10.180.57.120:3128
-ARG HTTPS_PROXY=http://10.180.57.120:3128
+#ARG http_proxy=http://10.180.57.120:3128
+#ARG https_proxy=http://10.180.57.120:3128
+#ARG HTTP_PROXY=http://10.180.57.120:3128
+#ARG HTTPS_PROXY=http://10.180.57.120:3128
 
 ENV http_proxy $http_proxy
 ENV https_proxy $https_proxy
@@ -61,11 +61,11 @@ RUN curl -fsSL https://github.com/krallin/tini/releases/download/${TINI_VERSION}
 
 # jenkins version being bundled in this docker image
 ARG JENKINS_VERSION
-ENV JENKINS_VERSION ${JENKINS_VERSION:-2.222.4}
+ENV JENKINS_VERSION ${JENKINS_VERSION:-2.235.3}
 
 # jenkins.war checksum, download will be validated using it (sha256sum)
 #ARG JENKINS_SHA=33a6c3161cf8de9c8729fd83914d781319fd1569acf487c7b1121681dba190a5
-ARG JENKINS_SHA=6c95721b90272949ed8802cab8a84d7429306f72b180c5babc33f5b073e1c47c
+ARG JENKINS_SHA=e88642a2b52fc26ffa4425a0aba65163f083d770e5ef7182b2e32de41ff33981
 
 # Can be used to customize where jenkins.war get downloaded from
 ARG JENKINS_URL=https://repo.jenkins-ci.org/public/org/jenkins-ci/main/jenkins-war/${JENKINS_VERSION}/jenkins-war-${JENKINS_VERSION}.war
